<resources>
    <string name="app_name">Taxi Central Conductor</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="taxi_name">Taxi</string>
    <string name="centarl_name">Central</string>
    <string name="title_activity_login">Iniciar Sesión</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Nombre Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="action_register">REGISTRO</string>
    <string name="action_sign_in_short">Iniciar Sesión</string>
    <string name="error_invalid_user">Usuario inválido</string>
    <string name="error_invalid_password">Contraseña muy corta</string>
    <string name="error_incorrect_password">Contraseña incorrecta</string>
    <string name="error_password_not_matched">Contraseñas no son iguales</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">El permiso es necesario para el funcionamiento completo</string>
    <string name="title_activity_register">Como registrarse?</string>
    <string name="title_activity_navigation_drawer">Taxi</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Ajustes</string>
    <string name="action_help">Ayuda</string>
    <string name="action_filter">Filtros</string>
    <string name="title_activity_">Actividad</string>

    <string name="title_activity_trip_history">Viajes anteriores</string>
    <string name="title_activity_trip_filter">Filtros</string>
    <string name="title_activity_trip_details">Detalle</string>
    <string name="accept">Aceptar</string>
    <string name="reject">Rechazar</string>
    <string name="title_activity_trip_reject">Viaje rechazado</string>
    <string name="Filter" translatable="false">Filtros</string>
    <string name="trip_rejected">Elija la razón por la cual el viaje fue rechazado</string>
    <string name="i_am_busy_this_moment">Estoy ocupado en este momento</string>
    <string name="work_ending">Estoy terminando mi jornada de hoy</string>
    <string name="callme">Otra, por favor llamar</string>
    <string name="confirm">Confirmar</string>
    <string name="title_activity_trip_accept">Viaje aceptado</string>
    <string name="trip_information">Información del viaje</string>
    <string name="trip_id">Viaje Id :</string>
    <string name="trip_date">Dia :</string>
    <string name="trip_time">Hora :</string>
    <string name="trip_type">Tipo :</string>
    <string name="send_message">Enviar mensaje</string>
    <string name="message">Mensaje</string>
    <string name="cancel">Cancelar</string>
    <string name="arrived">Arrivado</string>
    <string name="title_activity_account_statement">Estado de cuenta</string>
    <string name="payments">PAGOS</string>
    <string name="trip">VIAJES</string>
    <string name="title_activity_my_profile">Mi perfil</string>
    <string name="change_pass">Cambiar contraseña</string>
    <string name="title_activity_change_password">Cambiar contraseña</string>
    <string name="save">Guardar</string>
    <string name="old_password">Contraseña actual</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="repeat_password">Repetir contraseña</string>
    <string name="title_activity_notification">Notificaciones</string>
    <string name="title_activity_news">Novedades</string>
    <string name="title_activity_news_content">Contenido novedad</string>
    <string name="title_activity_anonymous_report">Denuncia anónima</string>
    <string name="send">Enviar</string>
    <string name="title_activity_anonymous_report_sent">Denuncia anónima</string>
    <string name="report_sent">Denuncia enviada</string>
    <string name="report_description">Descripción denuncia</string>
    <string name="incident_no">Número de incidente : </string>
    <string name="title_activity_taxi_waiting">Taxi esperando</string>
    <string name="taxi_central">Taxi Central</string>
    <string name="boarded">Abordado</string>
    <string name="call_client">Llamar al pasajero</string>
    <string name="title_activity_trip_started">Viaje comenzado</string>
    <string name="trip_ended">Viaje terminado</string>
    <string name="title_activity_rate_experience">Calificar experiencia</string>
    <string name="passenger_info">Información pasajero</string>
    <string name="rating">Calificaciones</string>
    <string name="skip">Saltear</string>
    <string name="rate">Calificar</string>
    <string name="title_activity_trip_ended">Viaje terminado</string>
    <string name="wait_payment">Esperando pago</string>
    <string name="payment_recived">Pago recibido</string>
    <string name="btn_continue">Continuar</string>
    <string name="title_activity_payment_cancelled">Pago cancelado</string>
    <string name="client_paid_cash">Cliente pago en efectivo</string>
    <string name="client_not_paid">Cliente no quiso pagar</string>
    <string name="destination_wrong">Dirección de destino inválida</string>
    <string name="client_never_boarded">Cliente nunca abordó</string>
    <string name="other">Otro</string>
    <string name="payment_cancel_reason">Por favor indicar la razón por la cual el pago fue cancelado</string>
    <string name="five_min_late_traffic">Llegaré 5 minutos tarde debido al tráfico</string>
    <string name="cant_find_address">No logro encontrar la dirección</string>

    <string name="ok">Ok</string>
    <string name="thanksyou">Gracias</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="title_activity_alert_dialog">Alerta</string>
    <string name="warning">ALERTA</string>
    <string name="show_map">Mostrar mapa</string>
    <string name="title_activity_show_maps">Mapa</string>
    <string name="title_activity_btparing">BT empajeramiento</string>
    <string name="error_not_send_message">Mensaje no enviado...intenta nuevamente</string>
    <string name="erro_password_not_matched">La contraseña antigua no es correcta</string>
    <string name="server_not_response">El servidor no responde...intenta nuevamente</string>
    <string name="call_not_allow">Llamada no permitida</string>
    <string name="erro_rating_not_send">Calificación no enviada</string>
    <string name="anonymous_note">Nota : La denuncia es anónima pero la ubicación actual es registrada.</string>
    <string name="error_connection_problem">Problemas de conexión</string>
    <string name="error_check_internet_connection">Por favor revisa la conexión a internet</string>
    <string name="name">Nombre :</string>
    <string name="number">N° Tel. :</string>
    <string name="address">Dirección :</string>
    <string name="To" translatable="false">Hasta</string>
    <string name="from">Desde</string>
    <string name="agrement">Acuerdo</string>
    <string name="details">Detalles</string>
    <string name="currency">"$"</string>
    <string name="fare">Tarifa : </string>
    <string name="source_address">Dirección origen : </string>
    <string name="destination_address">Dirección destino : </string>
    <string name="pickup_time">Fecha :</string>
    <string name="alert">Alerta!</string>
    <string name="trip_already_assigned">Ya tienes un viaje asignado!</string>
    <string name="blocked_title">Bloqueado!</string>
    <string name="blocked_message">Por favor contacte un administrador...</string>
    <string name="new_trip">Viaje nuevo</string>
    <string name="gcm_defaultSenderId">507542572202</string>
    <string name="on_trip">En viaje</string>
    <string name="trip_already_alloted">Este viaje ya ha sido tomado</string>
    <string name="title_activity_rough">Advertencia</string>
    <string name="text_logout">Cerrar sesión?</string>
    <string name="logout">Salir</string>
    <string name="no">No</string>
    <string name="yes">Si</string>
    <string name="save_changes">Guardar cambios</string>
    <string name="cancel_trip">Cancelar viaje</string>
    <string name="txt_out_of_zone">Estas fuera de tu zona de trabajo, para poder continuar, vuelve a tu zona.</string>
    <string name="txt_zone_control">Zona de control</string>
    <string name="discard">DESCARTAR</string>
    <string name="i_am_waiting_out_side">Estoy esperando afuera</string>
    <string name="please_call">Por favor llamar</string>
    <string name="client_is_not_here">El cliente no esta aquí</string>
    <string name="client_is_not_answering">El cliente no responde</string>
    <string name="address_does_not_exist">La dirección no existe</string>
    <string name="go_to_bluetooth_setting">Ir a ajustes de bluetooth</string>
    <string name="tripid">Id Viaje :</string>
    <string name="amount">Cantidad</string>
    <string name="go_to_home">Inicio</string>
    <string name="amount_paid">Este viaje ya ha sido pagado</string>
    <string name="avl_credit">Crédito disp. :</string>
    <string name="per_km">" por Km"</string>
    <string name="title_activity_cash_payment">Pago en efectivo</string>
    <string name="billing">Facturación</string>
    <string name="distance">Distancia :</string>
    <string name="total_fare">Total tarifa :</string>
    <string name="pay">Pagar</string>
    <string name="km">KM</string>
    <string name="received_message">Mensajes recibidos</string>
    <string name="credit_balance_low">Tu balance de créditos es bajo, selecciona otra opción</string>
    <string name="you_have_avl_balance">Tienes balance disponible, selecciona otra opción</string>
    <string name="not_route">Ruta no válida para el taxi</string>
    <string name="title_activity_updates">Actualizaciones</string>

    <!-- Date Util -->
    <string name="date_util_term_less">menos que</string>
    <string name="date_util_term_a">a</string>
    <string name="date_util_term_an">un</string>

    <string name="date_util_unit_second">segundo</string>
    <string name="date_util_unit_seconds">segundos</string>
    <string name="date_util_unit_minute">minuto</string>
    <string name="date_util_unit_minutes">minutos</string>
    <string name="date_util_unit_hour">hora</string>
    <string name="date_util_unit_hours">horas</string>
    <string name="date_util_unit_day">dia</string>
    <string name="date_util_unit_days">dias</string>
    <string name="date_util_unit_month">mes</string>
    <string name="date_util_unit_months">meses</string>
    <string name="date_util_unit_year">año</string>
    <string name="date_util_unit_years">años</string>

    <string name="date_util_prefix_lt">menos que un</string>
    <string name="date_util_prefix_about">acerca</string>
    <string name="date_util_prefix_over">por encima</string>
    <string name="date_util_prefix_almost">casi</string>

    <string name="date_util_suffix">atrás</string>
    <string name="sorry_no_data_found">No hay información</string>

    <string name="nav_activity">Actividad</string>
    <string name="nav_triphistory">Historia de viaje</string>
    <string name="nav_accountstatment">Estado de cuenta</string>
    <string name="nav_myprofile">Mi perfil</string>
    <string name="nav_notification">Notification</string>
    <string name="nav_news">Noticias</string>
    <string name="nav_anonymousreport">Anonymous Report</string>
    <string name="nav_btparing">Informe Anónimo</string>
    <string name="nav_update">Actualizaciones</string>
    <string name="nav_logout">Cerrar sesión</string>
    <string name="no_trip_available">Ningún viaje disponible en su zona</string>
    <string name="exit_message">¿Está usted quiere sure a la salida</string>
    <string name="exit">Salida</string>
    <string name="already_login">Ya hay una sesión iniciada, intenta luego nuevamente</string>
    <string name="already_login_with_other_device">Estas logeado en otro dispositivo, debes cerrar esa sesión para poder iniciar otra</string>

</resources>