<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/white_light"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_payment_cancelled"
    tools:context="com.taxicentral.Activity.PaymentCancelledActivity">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="0dp"
        app:cardElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:padding="10dp"
            android:text="@string/payment_cancel_reason"/>

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_below="@+id/heading"
            android:layout_width="match_parent"
            android:padding="@dimen/heading"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/heading"
                android:text="@string/client_paid_cash"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/heading"
                android:text="@string/client_not_paid"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/heading"
                android:text="@string/destination_wrong"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/heading"
                android:text="@string/client_never_boarded"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/heading"
                android:text="@string/other"/>
        </RadioGroup>

            <EditText
                android:id="@+id/description_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/radiogroup"
                android:layout_margin="@dimen/heading"
                android:visibility="gone"
                android:hint="@string/report_description"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/btn_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="0dp"
        app:cardElevation="2dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/heading"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="@dimen/btn_map_width"
                android:layout_height="@dimen/btn_height"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp">
                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:mrl_rippleBackground="@color/colorPrimary"
                    app:mrl_rippleColor="@color/black">
                    <Button
                        android:id="@+id/btn_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textStyle="bold"
                        android:background="@null"
                        android:text="@string/confirm"/>
                </com.balysv.materialripple.MaterialRippleLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
