<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.taxicentral.Activity.CashPaymentActivity"
    tools:showIn="@layout/activity_cash_payment">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="0dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/header_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/passenger_info"
                android:padding="10dp"
                android:textSize="@dimen/text_header"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:background="@color/black"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/activity_vertical_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:ems="6"
                    android:textColor="@color/black"
                    android:text="@string/name"/>
                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/name_tv"
                    android:padding="5dp"
                    android:text=""/>

                <TextView
                    android:id="@+id/number_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/name"
                    android:padding="5dp"
                    android:ems="6"
                    android:textColor="@color/black"
                    android:text="@string/number"/>
                <TextView
                    android:id="@+id/number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/number_tv"
                    android:layout_below="@+id/name"
                    android:padding="5dp"
                    android:text=""/>


                <TextView
                    android:id="@+id/source_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:layout_below="@+id/number"
                    android:text="@string/source_address"/>
                <TextView
                    android:id="@+id/source_address_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/source_address"
                    android:layout_marginLeft="5dp"
                    android:text=""/>

                <TextView
                    android:id="@+id/destination_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:layout_below="@+id/source_address_tv"
                    android:text="@string/destination_address"/>
                <TextView
                    android:id="@+id/destination_address_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_below="@+id/destination_address"
                    android:text=""/>


            </RelativeLayout>



        </LinearLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="0dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/header1_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/billing"
                android:padding="10dp"
                android:textSize="@dimen/text_header"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:background="@color/black"/>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/activity_vertical_margin"
                android:orientation="vertical">

            <TextView
                android:id="@+id/show_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:ems="6"
                android:textColor="@color/black"
                android:text="@string/distance"/>
            <TextView
                android:id="@+id/show_distance_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/show_distance"
                android:padding="5dp"
                android:text=""/>

                <TextView
                    android:id="@+id/fare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/show_distance_tv"
                    android:padding="5dp"
                    android:ems="6"
                    android:textColor="@color/black"
                    android:text="@string/fare"/>
                <TextView
                    android:id="@+id/fare_perkm_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/show_distance_tv"
                    android:layout_toRightOf="@+id/fare"
                    android:padding="5dp"
                    android:text=""/>

                <TextView
                    android:id="@+id/total_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fare_perkm_tv"
                    android:padding="5dp"
                    android:ems="7"
                    android:textColor="@color/black"
                    android:text="@string/total_fare"/>
                <TextView
                    android:id="@+id/total_amount_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fare_perkm_tv"
                    android:layout_toRightOf="@+id/total_amount"
                    android:padding="5dp"
                    android:text=""/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/total_amount">
                    <EditText
                        android:id="@+id/cash_amount_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/amount"/>
                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>





</LinearLayout>
    <android.support.v7.widget.CardView
        android:layout_width="@dimen/btn_map_width"
        android:layout_height="@dimen/btn_height"
        app:cardBackgroundColor="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp">
        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:mrl_rippleBackground="@color/colorPrimary"
            app:mrl_rippleColor="@color/black">
            <Button
                android:id="@+id/btn_pay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:background="@null"
                android:text="@string/pay"/>
        </com.balysv.materialripple.MaterialRippleLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
