<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/white_light"
android:orientation="vertical"
    >

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="0dp"
        app:cardElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_header"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:padding="10dp"
                android:text="@string/trip_rejected"/>

            <RadioGroup
                android:id="@+id/radiogroup"
                android:layout_below="@+id/heading"
                android:layout_width="match_parent"
                android:padding="@dimen/heading"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/radiobutton1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/heading"
                    android:checked="true"
                    android:text="@string/address_does_not_exist"/>
                <RadioButton
                    android:id="@+id/radiobutton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/heading"
                    android:text="@string/client_is_not_answering"/>
                <RadioButton
                    android:id="@+id/radiobutton3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/heading"
                    android:text="@string/other"/>
            </RadioGroup>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_below="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="0dp"
        app:cardElevation="2dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/heading"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp">
                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:mrl_rippleBackground="@color/colorPrimary"
                    app:mrl_rippleColor="@color/black">
                    <Button
                        android:id="@+id/btn_cancel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textStyle="bold"
                        android:background="@null"
                        android:text="@string/cancel"/>
                </com.balysv.materialripple.MaterialRippleLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/heading"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp">
                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:mrl_rippleBackground="@color/colorPrimary"
                    app:mrl_rippleColor="@color/black">

                    <Button
                        android:id="@+id/btn_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textStyle="bold"
                        android:background="@null"
                        android:text="@string/accept"/>
                </com.balysv.materialripple.MaterialRippleLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>
